welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: '(' expected but identifier found.
  if a!=b {return a+b} else {2*(a+b)}} 
     ^sumDouble:2: error: illegal start of simple expression
  if a!=b {return a+b} else {2*(a+b)}} 
                                     ^